LAB2/lab02_pkg/log/build_2024-10-25_14-22-30/lab02_pkg/stdout_stderr.log
running egg_info
writing ../../build/lab02_pkg/lab02_pkg.egg-info/PKG-INFO
writing dependency_links to ../../build/lab02_pkg/lab02_pkg.egg-info/dependency_links.txt
writing entry points to ../../build/lab02_pkg/lab02_pkg.egg-info/entry_points.txt
writing requirements to ../../build/lab02_pkg/lab02_pkg.egg-info/requires.txt
writing top-level names to ../../build/lab02_pkg/lab02_pkg.egg-info/top_level.txt
reading manifest file '../../build/lab02_pkg/lab02_pkg.egg-info/SOURCES.txt'
adding license file 'LICENSE'
writing manifest file '../../build/lab02_pkg/lab02_pkg.egg-info/SOURCES.txt'
running build
running build_py
copying lab02_pkg/controller.py -> /home/rosario/Desktop/Sensors/LAB2/lab02_pkg/build/lab02_pkg/build/lib/lab02_pkg
running install
running install_lib
copying /home/rosario/Desktop/Sensors/LAB2/lab02_pkg/build/lab02_pkg/build/lib/lab02_pkg/controller.py -> /home/rosario/Desktop/Sensors/LAB2/lab02_pkg/install/lab02_pkg/lib/python3.10/site-packages/lab02_pkg
byte-compiling /home/rosario/Desktop/Sensors/LAB2/lab02_pkg/install/lab02_pkg/lib/python3.10/site-packages/lab02_pkg/controller.py to controller.cpython-310.pyc
running install_data
  File "/home/rosario/Desktop/Sensors/LAB2/lab02_pkg/install/lab02_pkg/lib/python3.10/site-packages/lab02_pkg/controller.py", line 56
    if(math.pi-math.pi*0.01 <=  <= math.pi-math.pi*0.01 ):
                                ^^
SyntaxError: invalid syntax

running install_egg_info
removing '/home/rosario/Desktop/Sensors/LAB2/lab02_pkg/install/lab02_pkg/lib/python3.10/site-packages/lab02_pkg-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/lab02_pkg/lab02_pkg.egg-info to /home/rosario/Desktop/Sensors/LAB2/lab02_pkg/install/lab02_pkg/lib/python3.10/site-packages/lab02_pkg-0.0.0-py3.10.egg-info
running install_scripts
Installing controller script to /home/rosario/Desktop/Sensors/LAB2/lab02_pkg/install/lab02_pkg/lib/lab02_pkg
writing list of installed files to '/home/rosario/Desktop/Sensors/LAB2/lab02_pkg/build/lab02_pkg/install.log'
